// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpanDetailTable Column visibility should hide columns specified in hiddenColumns prop 1`] = `
<body>
  <div>
    <div
      class="normal-wrapper"
      style="position: relative; min-height: 100px;"
    >
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="euiDataGrid__focusWrap"
        data-focus-lock-disabled="disabled"
      >
        <div
          class="euiDataGrid euiDataGrid--fontSizeSmall euiDataGrid--bordersHorizontal euiDataGrid--headerUnderline euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--paddingSmall euiDataGrid--stickyFooter"
          style="width: 100%; height: auto;"
        />
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="grid-loading-overlay"
      >
        <span
          class="euiLoadingSpinner euiLoadingSpinner--xLarge"
        />
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
    <div
      class="euiEmptyPrompt"
    >
      <h2
        class="euiTitle euiTitle--medium"
      >
        No matches
      </h2>
      <span
        class="euiTextColor euiTextColor--subdued"
      >
        <div
          class="euiSpacer euiSpacer--m"
        />
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiText euiText--small"
          >
            No data matches the selected filter. Clear the filter and/or increase the time range to see more results.
          </div>
        </div>
      </span>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
  </div>
</body>
`;

exports[`SpanDetailTable Column visibility should render with visible columns 1`] = `
<body>
  <div>
    <div
      class="normal-wrapper"
      style="position: relative; min-height: 100px;"
    >
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="euiDataGrid__focusWrap"
        data-focus-lock-disabled="disabled"
      >
        <div
          class="euiDataGrid euiDataGrid--fontSizeSmall euiDataGrid--bordersHorizontal euiDataGrid--headerUnderline euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--paddingSmall euiDataGrid--stickyFooter"
          style="width: 100%; height: auto;"
        />
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="grid-loading-overlay"
      >
        <span
          class="euiLoadingSpinner euiLoadingSpinner--xLarge"
        />
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
    <div
      class="euiEmptyPrompt"
    >
      <h2
        class="euiTitle euiTitle--medium"
      >
        No matches
      </h2>
      <span
        class="euiTextColor euiTextColor--subdued"
      >
        <div
          class="euiSpacer euiSpacer--m"
        />
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiText euiText--small"
          >
            No data matches the selected filter. Clear the filter and/or increase the time range to see more results.
          </div>
        </div>
      </span>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
  </div>
</body>
`;

exports[`SpanDetailTable Pagination functionality should render pagination controls 1`] = `
<body>
  <div>
    <div
      class="normal-wrapper"
      style="position: relative; min-height: 100px;"
    >
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="euiDataGrid__focusWrap"
        data-focus-lock-disabled="disabled"
      >
        <div
          class="euiDataGrid euiDataGrid--fontSizeSmall euiDataGrid--bordersHorizontal euiDataGrid--headerUnderline euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--paddingSmall euiDataGrid--stickyFooter"
          style="width: 100%; height: auto;"
        />
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="grid-loading-overlay"
      >
        <span
          class="euiLoadingSpinner euiLoadingSpinner--xLarge"
        />
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
    <div
      class="euiEmptyPrompt"
    >
      <h2
        class="euiTitle euiTitle--medium"
      >
        No matches
      </h2>
      <span
        class="euiTextColor euiTextColor--subdued"
      >
        <div
          class="euiSpacer euiSpacer--m"
        />
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiText euiText--small"
          >
            No data matches the selected filter. Clear the filter and/or increase the time range to see more results.
          </div>
        </div>
      </span>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
  </div>
</body>
`;

exports[`SpanDetailTable Pagination functionality should render with default pagination 1`] = `
<body>
  <div>
    <div
      class="normal-wrapper"
      style="position: relative; min-height: 100px;"
    >
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="euiDataGrid__focusWrap"
        data-focus-lock-disabled="disabled"
      >
        <div
          class="euiDataGrid euiDataGrid--fontSizeSmall euiDataGrid--bordersHorizontal euiDataGrid--headerUnderline euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--paddingSmall euiDataGrid--stickyFooter"
          style="width: 100%; height: auto;"
        />
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="grid-loading-overlay"
      >
        <span
          class="euiLoadingSpinner euiLoadingSpinner--xLarge"
        />
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
    <div
      class="euiEmptyPrompt"
    >
      <h2
        class="euiTitle euiTitle--medium"
      >
        No matches
      </h2>
      <span
        class="euiTextColor euiTextColor--subdued"
      >
        <div
          class="euiSpacer euiSpacer--m"
        />
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiText euiText--small"
          >
            No data matches the selected filter. Clear the filter and/or increase the time range to see more results.
          </div>
        </div>
      </span>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
  </div>
</body>
`;

exports[`SpanDetailTable Sorting functionality should render with default sorting 1`] = `
<body>
  <div>
    <div
      class="normal-wrapper"
      style="position: relative; min-height: 100px;"
    >
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="euiDataGrid__focusWrap"
        data-focus-lock-disabled="disabled"
      >
        <div
          class="euiDataGrid euiDataGrid--fontSizeSmall euiDataGrid--bordersHorizontal euiDataGrid--headerUnderline euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--paddingSmall euiDataGrid--stickyFooter"
          style="width: 100%; height: auto;"
        />
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="grid-loading-overlay"
      >
        <span
          class="euiLoadingSpinner euiLoadingSpinner--xLarge"
        />
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
    <div
      class="euiEmptyPrompt"
    >
      <h2
        class="euiTitle euiTitle--medium"
      >
        No matches
      </h2>
      <span
        class="euiTextColor euiTextColor--subdued"
      >
        <div
          class="euiSpacer euiSpacer--m"
        />
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiText euiText--small"
          >
            No data matches the selected filter. Clear the filter and/or increase the time range to see more results.
          </div>
        </div>
      </span>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
  </div>
</body>
`;

exports[`SpanDetailTable renders the component with data 1`] = `
<body>
  <div>
    <div
      class="normal-wrapper"
      style="position: relative; min-height: 100px;"
    >
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="euiDataGrid__focusWrap"
        data-focus-lock-disabled="disabled"
      >
        <div
          class="euiDataGrid euiDataGrid--fontSizeSmall euiDataGrid--bordersHorizontal euiDataGrid--headerUnderline euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--paddingSmall euiDataGrid--stickyFooter"
          style="width: 100%; height: auto;"
        />
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="grid-loading-overlay"
      >
        <span
          class="euiLoadingSpinner euiLoadingSpinner--xLarge"
        />
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
    <div
      class="euiEmptyPrompt"
    >
      <h2
        class="euiTitle euiTitle--medium"
      >
        No matches
      </h2>
      <span
        class="euiTextColor euiTextColor--subdued"
      >
        <div
          class="euiSpacer euiSpacer--m"
        />
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiText euiText--small"
          >
            No data matches the selected filter. Clear the filter and/or increase the time range to see more results.
          </div>
        </div>
      </span>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
  </div>
</body>
`;

exports[`SpanDetailTable renders the empty component 1`] = `
<body>
  <div>
    <div
      class="normal-wrapper"
      style="position: relative; min-height: 100px;"
    >
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="euiDataGrid__focusWrap"
        data-focus-lock-disabled="disabled"
      >
        <div
          class="euiDataGrid euiDataGrid--fontSizeSmall euiDataGrid--bordersHorizontal euiDataGrid--headerUnderline euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--paddingSmall euiDataGrid--stickyFooter"
          style="width: 100%; height: auto;"
        />
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="grid-loading-overlay"
      >
        <span
          class="euiLoadingSpinner euiLoadingSpinner--xLarge"
        />
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
    <div
      class="euiEmptyPrompt"
    >
      <h2
        class="euiTitle euiTitle--medium"
      >
        No matches
      </h2>
      <span
        class="euiTextColor euiTextColor--subdued"
      >
        <div
          class="euiSpacer euiSpacer--m"
        />
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiText euiText--small"
          >
            No data matches the selected filter. Clear the filter and/or increase the time range to see more results.
          </div>
        </div>
      </span>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
  </div>
</body>
`;

exports[`SpanDetailTable renders the jaeger component with data 1`] = `
<body>
  <div>
    <div
      class="normal-wrapper"
      style="position: relative; min-height: 100px;"
    >
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="euiDataGrid__focusWrap"
        data-focus-lock-disabled="disabled"
      >
        <div
          class="euiDataGrid euiDataGrid--fontSizeSmall euiDataGrid--bordersHorizontal euiDataGrid--headerUnderline euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--paddingSmall euiDataGrid--stickyFooter"
          style="width: 100%; height: auto;"
        />
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="grid-loading-overlay"
      >
        <span
          class="euiLoadingSpinner euiLoadingSpinner--xLarge"
        />
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
    <div
      class="euiEmptyPrompt"
    >
      <h2
        class="euiTitle euiTitle--medium"
      >
        No matches
      </h2>
      <span
        class="euiTextColor euiTextColor--subdued"
      >
        <div
          class="euiSpacer euiSpacer--m"
        />
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiText euiText--small"
          >
            No data matches the selected filter. Clear the filter and/or increase the time range to see more results.
          </div>
        </div>
      </span>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
  </div>
</body>
`;

exports[`SpanDetailTableHierarchy renders the component with data 1`] = `
<body>
  <div>
    <div
      class="normal-wrapper"
      style="position: relative;"
    >
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="euiDataGrid__focusWrap"
        data-focus-lock-disabled="disabled"
      >
        <div
          class="euiDataGrid euiDataGrid--fontSizeSmall euiDataGrid--bordersHorizontal euiDataGrid--headerUnderline euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--paddingSmall euiDataGrid--stickyFooter"
          style="width: 100%; height: 500px;"
        />
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
    <div
      class="euiEmptyPrompt"
    >
      <h2
        class="euiTitle euiTitle--medium"
      >
        No matches
      </h2>
      <span
        class="euiTextColor euiTextColor--subdued"
      >
        <div
          class="euiSpacer euiSpacer--m"
        />
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiText euiText--small"
          >
            No data matches the selected filter. Clear the filter and/or increase the time range to see more results.
          </div>
        </div>
      </span>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
  </div>
</body>
`;

exports[`SpanDetailTableHierarchy renders the empty component 1`] = `
<body>
  <div>
    <div
      class="normal-wrapper"
      style="position: relative;"
    >
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="euiDataGrid__focusWrap"
        data-focus-lock-disabled="disabled"
      >
        <div
          class="euiDataGrid euiDataGrid--fontSizeSmall euiDataGrid--bordersHorizontal euiDataGrid--headerUnderline euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--paddingSmall euiDataGrid--stickyFooter"
          style="width: 100%; height: 500px;"
        />
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
    <div
      class="euiEmptyPrompt"
    >
      <h2
        class="euiTitle euiTitle--medium"
      >
        No matches
      </h2>
      <span
        class="euiTextColor euiTextColor--subdued"
      >
        <div
          class="euiSpacer euiSpacer--m"
        />
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiText euiText--small"
          >
            No data matches the selected filter. Clear the filter and/or increase the time range to see more results.
          </div>
        </div>
      </span>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
  </div>
</body>
`;

exports[`SpanDetailTableHierarchy renders the jaeger component with data 1`] = `
<body>
  <div>
    <div
      class="normal-wrapper"
      style="position: relative;"
    >
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        class="euiDataGrid__focusWrap"
        data-focus-lock-disabled="disabled"
      >
        <div
          class="euiDataGrid euiDataGrid--fontSizeSmall euiDataGrid--bordersHorizontal euiDataGrid--headerUnderline euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--paddingSmall euiDataGrid--stickyFooter"
          style="width: 100%; height: 500px;"
        />
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
    <div
      class="euiEmptyPrompt"
    >
      <h2
        class="euiTitle euiTitle--medium"
      >
        No matches
      </h2>
      <span
        class="euiTextColor euiTextColor--subdued"
      >
        <div
          class="euiSpacer euiSpacer--m"
        />
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiText euiText--small"
          >
            No data matches the selected filter. Clear the filter and/or increase the time range to see more results.
          </div>
        </div>
      </span>
    </div>
    <div
      class="euiSpacer euiSpacer--xl"
    />
  </div>
</body>
`;
